--- a/views/start.erb
+++ b/views/start.erb
@@ -207,12 +207,15 @@
   
   <script type="text/javascript">
   //Code to read files and ajax post to server
+  //-------------------this definitely needs to wait for multiple uploads to be complete!
   function processResults() {
-    $("#file-upload").hide();
-    $("#show-file-upload").show();
-    $.get('processFiles', function(data) {
-      drawGraph(JSON.parse(data));
-    });
+    setTimeout(function() {
+      $("#file-upload").hide();
+      $("#show-file-upload").show();
+      $.get('processFiles', function(data) {
+        drawGraph(JSON.parse(data));
+      });      
+    }, 2000); //remove this timer when complete
   }
   </script>
 
